--- a/CPDuels-backend-V1-main/package.json
+++ b/CPDuels-backend-V1-main/package.json
@@ -15,6 +15,9 @@
     "http": "^0.0.1-security",
     "mongoose": "^6.5.3",
     "node-fetch": "^3.2.10",
+    "pg": "^8.15.6",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.5.2"
   },
   "devDependencies": {
